--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A example of a support ticket system">
     <meta name="author" content="TallmanCode">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('/build/media/fav/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('/build/media/fav/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('/build/media/fav/favicon-16x16.png') }}">
+    <link rel="manifest" href="{{ asset('/build/media/fav/site.webmanifest') }}">
+    <link rel="mask-icon" href="{{ asset('/build/media/fav/safari-pinned-tab.svg') }}" color="#5bbad5">
+    <link rel="shortcut icon" href="{{ asset('/build/media/fav/favicon.ico') }}">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="msapplication-config" content="{{ asset('/build/media/fav/browserconfig.xml') }}">
+    <meta name="theme-color" content="#ffffff">
     <title>{% block title %}Tick-It - Finding support{% endblock %}</title>
     {%- block head -%}
     {%- endblock head -%}
