--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,1 +1,14 @@
+@import "variables";
+
 @import "~bootstrap/scss/bootstrap";
+
+//Custom Styles and Bootstrap Overrides
+@import "components/buttons";
+
+//Vue Fade transition
+.fade-enter-active, .fade-leave-active {
+    transition: opacity 0.5s ease-in-out;
+}
+.fade-enter-from, .fade-leave-to {
+    opacity: 0;
+}
