--- a/templates/backend/backendBase.html.twig
+++ b/templates/backend/backendBase.html.twig
@@ -9,7 +9,7 @@
 
 {% block body %}
     <body>
-    <div id="app">
+    <div id="wrapper">
         <backend-base></backend-base>
     </div>
     {{ encore_entry_script_tags('backend') }}
