--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,10 @@
     <meta name="msapplication-config" content="{{ asset('/build/media/fav/browserconfig.xml') }}">
     <meta name="theme-color" content="#ffffff">
     <meta name="csrf-token" content="{{ csrf_token('global_token') }}">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link
+            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+            rel="stylesheet">
     <title>{% block title %}Tick-It - Finding support{% endblock %}</title>
     {%- block head -%}
     {%- endblock head -%}
