Backend Auth & Api
Feat: api platform added
Feat: auth action added

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -22,6 +22,7 @@ a {
     background-color: $gray-100;
     width: 100%;
     overflow-x: hidden;
+    min-height: 100vh;
     #content {
       flex: 1 0 auto;
     }
